#04-01 Сохранение пользовательских данных SharedPref, вывод пользовательских данных в Профиль

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -70,4 +70,11 @@
         app:layout_constraintTop_toBottomOf="@id/password_input_layout"
         />
 
+    <!-- Добавлено при проблеме наслаивание последующего фрагмента -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="10dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
