--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 1. Основная ДНЕВНАЯ тема. -->
-    <style name="Theme.Homework6" parent="Theme.MaterialComponents.Light.NoActionBar" />
+    <style name="Theme.Homework6" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:fontFamily">@font/montserrat</item>
+    </style>
+
 
     <!-- 2. Тема для SplashScreen -->
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="android:fontFamily">@font/montserrat</item>
         <item name="windowSplashScreenBackground">@color/purple_splash</item>
 
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
         <item name="postSplashScreenTheme">@style/Theme.Homework6</item>
     </style>
+
+
+    <!--3. Стиль для Чипов с шрифтом montserrat -->
+    <style name="CustomChipChoice" parent="Widget.MaterialComponents.Chip.Choice">
+        <!-- Принудительно устанавливаем шрифт -->
+        <item name="android:fontFamily">@font/montserrat</item>
+        <!-- На случай, если первый пункт не сработает, меняем параметры текста -->
+        <item name="android:textAppearance">@style/CustomChipText</item>
+    </style>
+
+    <!-- Вспомогательный стиль для текста внутри чипа -->
+    <style name="CustomChipText" parent="TextAppearance.MaterialComponents.Chip">
+        <item name="android:fontFamily">@font/montserrat</item>
+    </style>
+
 </resources>
