#02-01 Лента постов в зависимости от выбранных тем пользователя

--- a/app/src/main/res/layout/fragment_new_user_introduce.xml
+++ b/app/src/main/res/layout/fragment_new_user_introduce.xml
@@ -75,7 +75,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:singleSelection="true"
+        app:singleSelection="false"
         app:selectionRequired="true"
         app:layout_constraintEnd_toEndOf="@+id/tilBio"
         app:layout_constraintStart_toStartOf="@+id/tilBio"
