--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Интерес"
+        android:text="@string/profile_interests"
         android:textAllCaps="true"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -61,16 +61,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider" />
 
-    <!-- 4. Само название темы -->
-    <com.google.android.material.chip.Chip
-        android:id="@+id/chipTopic"
-        style="@style/Widget.MaterialComponents.Chip.Action"
-        android:layout_width="wrap_content"
+    <!-- 4. Контейнер для нескольких тем -->
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroupInterests"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:clickable="false"
-        tools:text="Спорт"
-        app:chipIcon="@android:drawable/star_on"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvInterestLabel" />
 
