--- a/app/src/main/res/layout/dialog_post_detail.xml
+++ b/app/src/main/res/layout/dialog_post_detail.xml
@@ -86,7 +86,7 @@
                 android:paddingHorizontal="16dp"
                 android:text="@tools:sample/lorem/random"
                 android:textAppearance="?attr/textAppearanceBody1"
-                android:textColor="?attr/colorOnSurfaceVariant" />
+                android:textColor="?android:attr/textColorSecondary" />
 
         </LinearLayout>
 
